more citations added

--- a/chap3.tex
+++ b/chap3.tex
@@ -112,14 +112,14 @@ rockets. In a speech to the Society of Experimental Test Pilots in
 August of 1959, a hostile audience for this sort of rhetoric, von
 Braun emphasized that human control in rocketry is ``actually
 undesirable'' because human beings are ``outrageously slow and
-cumbersome'' in missile terms.\cite[p. 66-67]{DM} While von Braun
+cumbersome'' in missile terms \cite[p. 66-67]{DM}. While von Braun
 may have been the most polemical, he was not alone in his cautions to
 test pilots about the limits of their capacities.
 In an earlier speech to the SETP (October 4, 1957) on automation and
 the ``survival'' of the test pilot as a profession, Richard Horner
 took a balanced and moderate view on human involvement, but warned
 that technology would progress faster than human beings change:
-the ``link'' that improves the least ``is the man himself''\cite[p. 19]{DM}>
+the ``link'' that improves the least ``is the man himself''\cite[p. 19]{DM}.
 
 Pilots---prospective astronauts---were not about to find themselves
 cut out of the control loop, and for good reasons. Not only was their
@@ -141,9 +141,13 @@ airplane with you to be exposed to any adverse results.''\cite[p.
   55]{DM}} Al Blackburn's response to Von Braun's speech to the
 SETP was particularly empassioned, and recounted his many experiences with
 ``brain-dead autopilots, broken fire control systems, and failed cockpit
-computers''\cite[p. 68]{DM} From
+computers''\cite[p. 68]{DM}. From
 his admittedly partial perspective, the resourcefulness of human
 pilots is the answer to automated technology's lack of reliability.
+
+%%TODO2 can you find this exact TERM used?
+%%the shibboleth ``third world man'' was waiting on the outcome of the
+%%space race to decide whether to be communist or capitalist 
 
 Such debates over control did not go away, but lasted through the each
 of the Mercury, Gemini, and Apollo programs.Mercury, which began the
@@ -160,30 +164,34 @@ Mercury astronauts into space---the astronauts were launched by
 automated rockets, and returned to the ground on a purely ballistic
 trajectory. But the presence of the human astronaut was greatly
 important to the Mercury project, even if he (they were all men)
-largely flew as ``Spam in a tin can.''\cite{???} Putting a man in
+largely flew as ``Spam in a tin can.''\cite[p. 60]{wolfe} Putting a man in
 space was a political venture more than a scientific one or a matter
 of national defense.\footnote{Scientists held and continue to hold
   that unmanned missions are more effective in generating scientific
   discoveries than manned ones.} In the eyes of the world---or at
 least as interpreted by Washington---the
-reputation of the United States depended on it. The shibboleth
-``third world man'' was waiting on the outcome of the space race to
-decide whether to be communist or capitalist.\cite{???} Apollo was, among many
-other things, a nationalist (and even perhaps imperial)  PR campaign.
+reputation of the United States depended on it. Project Apollo was
+conceived of by Kennedy as a program of diplomacy,
+which would help to ``win the battle that is now going on around the
+world between freedom and tyranny'' by impressing the ``minds of men
+everywhere'' \cite{KennedyMay25}: ``other countries of the free
+world---troubled and restless'' were waiting outcome of the space race to
+decide whether to be communist or capitalist \cite{KennedySep7}. Apollo was, among many
+other things, a nationalist (and even perhaps imperial) PR campaign.
 Spurred on by Russian successes (Sputnik, Gargarin), which were
 originally of little political interest until the media reporting on
 the events presented them in a frantic light, as a possible sign of
 Soviet technological dominance,\footnote{There was little coverage in
-  Russian papers about the Sputnik launch, and even Gargarin was not
-  greatly covered. However, the media frenzy that ensued in the United
+  Russian papers about the Sputnik launch (and even Gargarin was not
+  greatly covered). However, the media frenzy that ensued in the United
 States and other countries worldwide made clear the political
-importance of being first in space.\cite{???}} Kennedy pushed for a greater
+importance of being first in space. See \cite{bessonov}.} Kennedy pushed for a greater
 investment in space research. But he was ``not that interested in
-space''\footnote{He continued: ``I think it's nice, I think we should
-  find out about it,'' but balked at the level of funding necessary
+space''\footnote{He continued: ``I think it's good, I think we ought
+  to know about it,'' but balked at the level of funding necessary
   for the manned space program unless it led to a US political and PR
   victory.}---primarily, he wanted to beat the Russians to some big,
-visible space project.\cite{???-whitehousetapes} This project had to
+visible space project \cite{KennedyNov21}. This project had to
 be manned, precisely because human spaceflight captured peoples
 imaginations, and because the Soviets were certain to continue their
 piloted space flight ventures. But Soviet spacecraft continued to be
@@ -191,10 +199,10 @@ more automated than their Western counterparts---Gargarin could not
 operate manual backup functionality without unlocking a combination
 lock, the
 code to which was only reluctantly placed in the cockpit in a sealed
-envelope rather than being radioed from the ground\cite[p. 89]{DM}---and
+envelope rather than being radioed from the ground \cite[p. 89]{DM}---and
 this automation was seen as a feminization of space:  Soviet
 spacecraft required no skill to operate, and were therefore,
-rhetorically at least, less impressive.\cite{???} This reading was
+rhetorically at least, less impressive \cite[p. 90]{DM}. This reading was
 supported some years later in 1963 by the flight of Valentina
 Tereshkova, the 
 first woman in space (a milestone not followed by the United States
@@ -206,7 +214,7 @@ not fit with the ideally meritocratic culture and the political aims
 of the US program, not to mention the flying culture of the astronauts
 ultimately selected for the program.\footnote{All those selected for
   the Mercury program were military test pilots, despite NASA's
-  existence as a civilian agency.\cite{???-DM} Issues of secrecy alone
+  existence as a civilian agency.} Issues of secrecy alone
 should not have disqualified other military personnel, and a greater
 emphasis on science in the program would have suggested actually
 including scientists on flight teams, as Mindell notes. Though over the recruitment
