--- a/concl.tex
+++ b/concl.tex
@@ -313,6 +313,8 @@ technologies and their impacts because they favor unrealistic---and
 indeed, unreal---totalisms: all human or all machine, fully manual driving or fully
 autonomous driving.}
 
+%% TODO: FIX THIS FOOTNOTE, make it clearer how it fits
+
 The problem facing AI, according to Lucy Suchman\footnote{Note this is cited in
   \cite[p. 331-332]{ekbia}.}, ``is less that we attribute agency to
 computational artifacts than that our language for talking about
@@ -771,4 +773,4 @@ that humans remain involved, who they are, where they are, and how
 the system is being designed to serve their needs or impede their
 agency.
 
-
+%% TODO make sure there isn't a hanging word!
