--- a/intro.tex
+++ b/intro.tex
@@ -3,6 +3,8 @@
 
 %Intro / Visions / Public Faces (14 p)
 
+%%A FEW IMAGES for this chapter
+
 It is early August, 1925, and a strange spectacle greets viewers on
 Broadway in New York City. An empty car lurches uncertainly down the
 street,\footnote{This description is adapted from Time
@@ -103,10 +105,10 @@ boat,\cite{???} but though it was not fundamentally new, the use of the
 technology on public roads nevertheless shocked onlookers.
 Contemporary news articles describe the machine as if it drove itself,
 as if the physical position of the person was what mattered, not the
-fact that a human was always using the radio transmitter. ``Driverless,
+fact that a human was always using the radio transmitter:  ``Driverless,
 it will start its own motor, throw in its clutch, twist its steering
 wheel, toot its horn, and it may even 'sass' the policeman at the
-corner''\cite{???}. Described as``one of the most amazing products of
+corner'' \cite{???}. Described as``one of the most amazing products of
 modern science,'' the 
 car proceeds ``as though there were an invisible driver at the wheel''
 in an effect both ``uncanny and mystifying''\cite{???}. Such work,
@@ -335,6 +337,8 @@ developments in automated driving did not materialize, and research
 languished throughout the late 1960s and 1970s.\cite{???}
 
 \subsection{Research at the Turn of the Century}
+
+%% FOOTNOTE the acronyms
 
 In contrast to earlier radio or track-based electrical control, the
 ``modern'' era of self-driving vehicle research begins with
@@ -701,6 +705,8 @@ the public.
 %% Note: I need more voices from actual modern driverless car research
 %% papers, though looking at the Dickmanns ones more is a good idea! need
 %% a section specifically on how the ideologies come through!
+
+%% TODO cut down as a footnote? or integrate into the text (YES!)
 
 \footnotetext{I set out to critically examine the cultural and social
 implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
