--- a/main.bib
+++ b/main.bib
@@ -1244,6 +1244,46 @@
    year = "1994",
 }
 
+@BOOK{wolfe,
+   author = "Tom Wolfe",
+   title = "{T}he {R}ight {S}tuff",
+   publisher = "Picador",
+   address = "New York, NY",
+   year = "2008",
+}
+
+@UNPUBLISHED{KennedyMay25,
+   author = "John F. Kennedy",
+   title = "Special Message to the COngress on Urgent National Needs",
+   month = "May 25",
+   year = 1961,
+   note = "Via The American Presidency Project, http://www.presidency.ucsb.edu/ws/?pid=8151",
+}
+
+@UNPUBLISHED{KennedySep7,
+   author = "John F. Kennedy",
+   title = "Speech at the Civic Auditorium, Portland, OR",
+   month = "September 7",
+   year = 1960,
+   note = "Via http://jfklink.com/speeches/jfk/sept60/jfk070960_portland03.html",
+}
+
+@ARTICLE{bessonov,
+   author = "Kirill Bessonov",
+   title = "{S}putnik's {L}egacy",
+   journal = "The Moscow News",
+   month = "April 10",
+   year = 2007,
+   note = "Archived at http://web.archive.org/web/20070516042012/http://mnweekly.ru/news/20071004/55280383.html",
+}
+
+@UNPUBLISHED{KennedyNov21,
+   author = "John F. Kennedy",
+   title = "Transcript of Presidential Meeting in the Cabinet Room of the White House: Supplemental appropriations for the National Aeronautics and Space Administration",
+   month = "November 21",
+   year = 1962,
+   note = "http://history.nasa.gov/JFK-Webbconv/pages/transcript.pdf",
+}
 
 
 
