more small edits and some citations

--- a/chap3.tex
+++ b/chap3.tex
@@ -241,12 +241,12 @@ a mission to the moon to take place---set out to extend the
 capabilities of Mercury, and incorporate lessons learned from the
 precursor program. One way this occurred was specifically technical, a
 re-engineering of the space capsule to allow systems to be installed
-and serviced from the outside of the craft \cite{???}. But another
+and serviced from the outside of the craft \cite{NASAGeminiConcept}. But another
 reorchestration of space flight in the Gemini program involved the
 human's interaction with the spacecraft through control systems.
 Pilots wanted a role in launch vehicle guidance, and a number of
 simulator studies were commissioned to identify the capacity of humans to
-actually guide boosters into orbit \cite{???}. Pilots, spun in a
+actually guide boosters into orbit. Pilots, spun in a
 centrifuge in Johnsville, PA to simulate the immense acceleration of
 takeoff, flew
 simulated rockets: while some tests failed, with astronauts losing
@@ -254,9 +254,9 @@ control during stage changes, some were able to launch the vehicle
 into orbit, and these tests served as evidence for the importance of
 pilots to the ``reliability and flexibility'' of launch vehicles,
 the same phrasing used to justify the pilot's role in the X-15
-testing\cite[p. 72]{???-DM}. Some even argued that the lack of pilots
+testing\cite[p. 72]{DM}. Some even argued that the lack of pilots
 explained the high failure rate of automated rockets\cite[p.
-  73]{???-DM}. Though no American would ever fly the launch stage of
+  73]{DM}. Though no American would ever fly the launch stage of
 the rocket, pilots continued to push for control. Robert Voas,
 responsible for astronaut selection and training, was a firm believer
 in the human role both for monitoring and managing automated systems,
