--- a/concl.tex
+++ b/concl.tex
@@ -315,12 +315,12 @@ autonomous driving.}
 
 %% TODO: FIX THIS FOOTNOTE, make it clearer how it fits
 
-The problem facing AI, according to Lucy Suchman\footnote{Note this is cited in
+The problem facing AI, according to Lucy Suchman\footnote{Note that
+  Ekbia cites this statement as well
   \cite[p. 331-332]{ekbia}.}, ``is less that we attribute agency to
 computational artifacts than that our language for talking about
 agency, whether for persons or artifacts, presupposes a field of
-discrete, self-standing entities''\cite[p.
-  263]{???-suchman-humanmachinereconfigurations-plansandsituatedactions-2e}.
+discrete, self-standing entities''\cite[p. 263]{SuchmanPlans}.
 Instead, we should be asking how does intelligent behavior emerge in
 the interactions of 
 humans and machines, refusing to fix \emph{a priori} the category of
