--- a/intro.tex
+++ b/intro.tex
@@ -681,6 +681,43 @@ productive ways. This appreciation allows us to shift the fundamental
 questions we ask about technology in a way that is, hopefully,
 productive for research and policy-making.
 
+I set out to critically examine the cultural and social
+implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
+conceived of driverless cars as just-another-AI-technology, something
+understood and on which a meaningful ideological critique could be
+based. But as I researched, I discovered that not only did
+self-driving cars lack a fixed social meaning---their uses and
+contexts still up for grabs---but the technology itself is unspecified
+in profound and important ways. In an apt lesson for an early researcher,
+here was a thing which had not reached the stage of becoming, in
+Latour's parlance, a ``black box,'' despite the media's treatment of
+it as such \cite{LatourScience}. Below the surface, controversy
+bubbles. The deeper one 
+goes, the more ambivalent the mess becomes. Certain ideas seem
+constant across projects, but others differ wildly. Their stated goals
+often seem subtly off-set from their assumptions and end-products. And
+even more fundamentally, the idea of the ``self-driving'' vehicle,
+where the human does nothing at all, is hardly a self-evident one.
+Turning up other research paths---and indeed, numerous historical
+counterexamples---made it painfully clear that the story I wanted was
+not the story I could tell.\footnote{The time has not yet come when the social
+and cultural impacts can reasonably be predicted in a cohesive way.
+But, as I think such things are absolutely fundamental to the way we
+should think about new technologies, I am unwilling to drop them
+entirely. So what follows is a patchwork, though, I hope, an artful
+one.} Different technological possibilities produce several visions of
+what society might be, but each will ultimately have to come into
+contest not only with physical reality, but the social realms of law,
+technology, and public acceptance. Rather than taking the visions as
+my starting point, I have had to dig deeper: putting these visions in the context of
+historical fields and precedents, and shining light through their
+gaps. And that is what I hope this project has become, a 
+deep look into the ideologies and rhetorics of the self-driving car,
+one which hints at what society might be like once these
+vehicles are common, but moreso investigates what different models for these vehicles
+exist, and what their public face might be if different people wrote,
+and different ideas guided, their stories.
+
 Fundamentally, I am a scientist at heart,\footnote{I mean this not necessarily in
   the methods of what is considered modern, experimental science,
   which does not fit easily within the realms of historical critique,
@@ -690,7 +727,7 @@ to disprove? While I say many things that have significant backing,
 though they may not themselves be provable\footnote{I hope they are
   convincing, or at least suggestive.} in any real sense, my core case
 is that there is more than one story to tell about road vehicle
-automation.\footnotemark One can argue about approaches to automation and autonomy,
+automation. One can argue about approaches to automation and autonomy,
 based on historical examples, empirical data, or ethnographic
 findings, but the idea that the conventional story about automation
 (that it is clearly and naturally headed toward completeness and
@@ -700,48 +737,11 @@ generally conceived, is far narrower than history suggests it should
 be. A broader view of this narrative shows a different side of
 automated vehicles that is more hybrid, more complex, and presents
 very different questions for policymakers, engineers, designers, and
-the public. 
+the public. Stories have power, and it
+behooves me, on finding the stories we tell to be so deeply one-sided,
+to try to rebalance the narrative.
 
 %% Note: I need more voices from actual modern driverless car research
 %% papers, though looking at the Dickmanns ones more is a good idea! need
 %% a section specifically on how the ideologies come through!
 
-%% TODO cut down as a footnote? or integrate into the text (YES!)
-
-\footnotetext{I set out to critically examine the cultural and social
-implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
-conceived of driverless cars as just-another-AI-technology, something
-understood and on which a meaningful ideological critique could be
-based. But as I researched, I discovered that not only did
-self-driving cars lack a fixed social meaning---their uses and
-contexts still up for grabs---but the technology itself is unspecified
-in profound and important ways. An apt lesson for an early researcher,
-here was a thing which had not reached the stage of becoming, in
-Latour's parlance, a ``black box,'' despite the media's treatment of
-it as such. Below the surface, controversy bubbles. The deeper one
-goes, the more ambivalent the mess becomes. Certain claims seem
-constant across projects, but others differ wildly. Their stated goals
-often seem subtly off-set from their assumptions and end-products. And
-even more fundamentally, the idea of the ``self-driving'' vehicle,
-where the human does nothing at all, is hardly a self-evident one.
-Turning up other research paths---and indeed, numerous historical
-counterexamples---made it painfully clear that the story I wanted was
-not the story I could tell. The time had not yet come when the social
-and cultural impacts could reasonably be predicted in a cohesive way.
-But, as I think such things are absolutely fundamental to the way we
-should think about new technologies, I am unwilling to drop them
-entirely. So what follows is a patchwork, though, I hope, an artful
-one. Several technological possibilities produce several visions of
-what society might be, but each will ultimately have to come into
-contest not only with physical reality, but the social realms of law,
-technology, and public acceptance. Rather than taking the visions as
-my starting point, I must dig deeper: putting them in the context of
-historical fields and precedents, and shining light through their gaps
-for all to see. And that is what I hope this project has become, a
-deep look into the ideologies and rhetorics of the self-driving car,
-one which hints at what society might be like once these
-vehicles are common, but moreso investigates what different models for these vehicles
-exist, and what their public face might be if different people wrote,
-and different ideas guided, their stories. Stories have power, and it
-beehoves me, on finding the stories we tell to be so deeply one-sided,
-to try to rebalance the narrative.}
