--- a/main.bib
+++ b/main.bib
@@ -1285,6 +1285,29 @@
    note = "http://history.nasa.gov/JFK-Webbconv/pages/transcript.pdf",
 }
 
+@BOOK{LatourScience,
+   author = "Bruno Latour",
+   title = "{S}cience in {A}ction: {H}ow to {F}ollow {S}cientists and {E}ngineers {T}rough {S}ociety",
+   publisher = "Harvard University Press",
+   address = "Cambridge, MA",
+   year = "1988",
+}
+
+@BOOK{SuchmanPlans,
+   author = "Lucy Suchman",
+   title = "{H}uman {M}achine {R}econfigurations: {P}lans and {S}ituated {A}ctions",
+   publisher = "Cambridge University Press",
+   address = "Cambridge, UK",
+   year = "2006",
+}
+
+@TECHREPORT{NASAGeminiConcept,
+   author = "{National Aeronautics and Space Administration}",
+   title = "Project Gemini - A Chronology. Part 1 (A)",
+   type = "NASA Special Publication",
+   number = "4002",
+   note = "http://www.history.nasa.gov/SP-4002/p1a.htm",
+}
 
 
 
