more citations added to chap3

--- a/chap3.tex
+++ b/chap3.tex
@@ -234,6 +234,9 @@ culture was dominated by influences from the test pilot community.}
 %% into space), but not a meritocratic, capitalist one
 
 %%%%WARNING CITATION STYLE CHANGE%%%%%%%%
+%%cites removed below
+%  with manual control\cite[p. 84]{DM}
+% a backup for automated systems\cite[p. 83]{DM}
 
 The development of the Gemini spacecraft---actually started after the
 Apollo project, intended to demonstrate capabilities necessary for
@@ -255,26 +258,26 @@ into orbit, and these tests served as evidence for the importance of
 pilots to the ``reliability and flexibility'' of launch vehicles,
 the same phrasing used to justify the pilot's role in the X-15
 testing\cite[p. 72]{DM}. Some even argued that the lack of pilots
-explained the high failure rate of automated rockets\cite[p.
-  73]{DM}. Though no American would ever fly the launch stage of
+explained the high failure rate of automated rockets\cite[p. 73]{DM}.
+Though no American would ever fly the launch stage of
 the rocket, pilots continued to push for control. Robert Voas,
 responsible for astronaut selection and training, was a firm believer
 in the human role both for monitoring and managing automated systems,
 but also 
-navigation, communications, and performing research\cite[p.
-  77]{???-DM}. Monitored automation, which prevailed in Mercury---with
+navigation, communications, and performing research\cite[p. 77]{DM}.
+Monitored automation, which prevailed in Mercury---with
 the human ``more than secondary, if still less than primary''\cite[p.
-  77]{???-DM}---continued into the Gemini program. The Gemini pilot
+  77]{DM}---continued into the Gemini program. The Gemini pilot
 interfaced with an inertial navigation system, a digital computer, and
 an optical star tracker, responsible for tasks that would be too heavy
 or too difficult to automate, and remaining as a backup for automated
-systems\cite[p. 83]{???-DM}. But Mindell holds that advancing
+systems. But Mindell holds that advancing
 technology was seen to be served by the inclusion of more human
 control, which Mercury (in association with simulator tests) had proved was
-feasible\cite[p. 84]{???-DM}. The importance of orbital maneuvers,
+feasible\cite[p. 84]{DM}. The importance of orbital maneuvers,
  such as rendezvous and docking, for the Gemini missions suggested returning
 the role of piloting to the spacecraft pilot, and rendezvous was
-indeed performed with manual control\cite[p. 84]{???-DM}. But, as
+indeed performed with manual control. But, as
 pilots (particularly, Jim McDivitt) soon discovered, orbital
 rendezvous could not be achieved by the
 traditional manner of flying: in orbit, flying toward an object is not
@@ -282,23 +285,25 @@ an appropriate way to achieve rendezvous, which requires not only
 passing close to the target but remaining there for an extended
 period. Matching velocity means matching orbits, and so ``catching
 up'' to a target may require going slower to change orbits\cite[p.
-  86]{???-DM} ``Numbers, equations, and calculations'' would be
+  86]{DM}. ``Numbers, equations, and calculations'' would be 
 required, and were bootstrapped to the pilot's senses with a new
 readout, the IVI or Incremental Velocity Indicator, which could be
 programmed with particular velocity changes in different axes and
 would show visually when those particular burns had been achieved,
 so that the human pilot would know when to stop accelerating\cite[p.
-  86-87]{???-DM} Pilots did not fight the implementation of such
+  86-87]{DM}. Pilots did not fight the implementation of such 
 technology, realizing that anything that ``helped them manage the
 chaos [of space flight] would extend their ability,'' and overall
 liked piloting the Gemini craft, which they saw as expressing the
 ``national character'' through the importance of the individual pilot
-to the vehicle's operations\cite[p. 88]{???-DM} Gemini is 
+to the vehicle's operations\cite[p. 88]{DM} Gemini is 
 a triumph of manual control, aided of course by automated read-outs.
 
+%cites removed
+% missions actually flew\cite[p. 93]{DM}
 The Apollo program started too soon to learn the lessons of
 Gemini---the Apollo system design was complete by the time Gemini
-missions actually flew\cite[p. 93]{???-DM}---but despite the
+missions actually flew---but despite the
 ultimately high levels of automation present with the Apollo
 spacecraft, arguments about human role shaped development on this
 parallel program. One major locus of such controversy was the Apollo
@@ -310,23 +315,24 @@ development, both from military ICBM programs which often used
 self-contained inertial guidance units, and from work by Laning and
 Trageser from the Instrumentation Lab at MIT on a small Mars probe,
 driven by ``self-dependent'' navigation, which could ideally use
-complex logic to respond autonomously to problems\cite[p.
-  99-100]{???-DM} Though self-contained navigation capacity was a goal
+complex logic to respond autonomously to problems\cite[p. 99-100]{DM}
+Though self-contained navigation capacity was a goal
 for the engineers at MIT responsible for the guidance system---working
 under Charles Stark Draper, who was also involved in developing
 guidance systems for ICBMs---much of this functionality was ultimately
-removed due to computer memory restrictions\cite{???}. The Apollo
+removed due to computer memory restrictions\cite{tindallMay12}. The Apollo
 spacecraft would have to be in contact with Earth for guidance
 corrections and instructions over the long term. Human beings were
-again counted on for sextant readings and for initiating appropriate
-program modes and monitoring automation systems,\cite{???} and the spacecraft
+again counted on for sextant readings, for initiating appropriate
+program modes and monitoring automation systems\cite[p.
+  4]{BennettExperience}, and the spacecraft 
 could operate in a self-contained fashion for some length of
 time, albeit with greater positional errors than when a ground
-reference is used\cite[p. 191]{???-BennettCheatham}. The LM's approach
+reference is used\cite[p. 191]{BennettCheatham}. The LM's approach
 to the surface also involved a complex dance of manual and automated
 capabilities, with shifting roles for different phases of the
 landing.\footnote{While the details of this are largely superfluous
-  here, see \cite{???-BennettCheatham} for more information.} While the initial
+  here, see \cite{BennettCheatham} for more information.} While the initial
 idea for lunar landing was that the 
 computer would guide the spacecraft down, given appropriate landmark
 fixes from pilots, this was not how the LM was flown: despite
@@ -334,15 +340,15 @@ possessing an autopilot capable of automatic landing, pilots used
 their prerogative of ultimate control to take over at various stages
 of landing: Armstrong, famously, took manual control on the Apollo 11
 landing to seek out a cleaner landing spot and avoid a potentially
-dangerous crater\cite[p. 3]{???-DM} But even this description is too
+dangerous crater\cite[p. 3]{DM} But even this description is too
 simplistic. As Allan Klumpp describes in a
 paper on the Lunar Module landing system: ``The essence of the
 approach phase guidance system is that the LM commander can manually
 steer the LM to the selected landing site, yet the trajectory he flies
-is produced by an automatic guidance system'' \cite[p.
-  129]{???-Klumpp}. Klumpp's self-described ``hybrid'' system accounts 
+is produced by an automatic guidance system'' \cite[p. 129]{Klumpp}.
+Klumpp's self-described ``hybrid'' system accounts
 for the ``obvious desire of any man to control his craft'' and
-provides both flexibility and safety\cite[p. 129-130]{???-Klumpp}
+provides both flexibility and safety \cite[p. 129-130]{Klumpp}.
 While the Apollo engineers perhaps
 got away with a lot of automation, in part because the astronauts were
 busy with Gemini instead, manual controls still proved critical to the
@@ -364,12 +370,12 @@ spaceflight.\footnote{Wiesner not only disagreed with the importance
   continued to oppose LOR after the official NASA announcement, and
   argued with von Braun in front of the
   press at Marshall Space Flight Center, until President Kennedy
-  stepped in to end the argument\cite{???}.} Unmanned exploration is
-cheaper by orders of magnitude\cite[p. 66]{???-coxMurray}. To serve
+  stepped in to end the argument \cite[p. 43]{Seamans}.} Unmanned exploration is
+cheaper by orders of magnitude \cite[p. 66]{coxMurray}. To serve
 scientific goals, humans are not required, and in his role as chair of
 the Presidential Science Advisory Committee, Wiesner felt that his
 duty was to argue against the work on scientific
-grounds\cite{???}.\footnote{While Killian's list of goals for the
+grounds \cite[Chapter 2]{Levine}.\footnote{While Killian's list of goals for the
   space program included the human need to explore, national defense,
   national pride, and scientific experiment, and while the
   congressional hearings about the space program said little about
@@ -398,16 +404,16 @@ think of the Mars rovers \emph{Spirit} and \emph{Opportunity} as
 autonomous robots remotely carrying out science experiments---as
 Clancey describes them often showing up anthropomorphized as a ``robot
 geologist'' or 
-``explorer'' in news coverage\cite[p. 7]{???-clancey}---they are
+``explorer'' in news coverage\cite[p. 7]{clancey}---they are
 in reality telerobotic systems in Sheridan's mold. The rovers are not
 sent out to wander or find goals by themselves. They drive mostly
 blind, with only their immediate obstacle detection, following manual
 waypoints entered by human navigators on Earth: their autonomous
 path-finding systems are much slower, and use more power, and are
-therefore generally avoided\cite[p. 118]{???-clancey} While the rovers
+therefore generally avoided \cite[p. 118]{clancey}. While the rovers
 are out of contact for the span of two weeks during solar
 conjunctions, the instruments lie dormant and the rovers sit
-still\cite[p. 25]{???-clancey}. Though the rovers are technically capable of
+still \cite[p. 25]{clancey}. Though the rovers are technically capable of
 carrying out pre-planned science sequences during this time, including
 automatic navigation, this capability is not used. Human observation,
 human teleoperation, is too important a part of the process, and
@@ -416,45 +422,44 @@ scientists define sites of interest, locations to take samples, and
 the paths to reach them most safely and effectively. Scientists
 contacted the rovers at least once per day to relay plans, and again
 to retrieve results, with more intense schedules during the early
-parts of the program\cite[p. 58]{???-clancey}. Small sets of
+parts of the program \cite[p. 58]{clancey}. Small sets of
 operations are requested, and the outcomes monitored, with new plans
 being made by humans to account for new data at each step.
 
 This in some ways
 represents greater engagement between scientists and the remote
 machine than during the earlier \emph{Viking} mission, in which weeks
-were spent writing programs to run the robot.\cite[p. 58]{???-clancey}
+were spent writing programs to run the robot \cite[p. 58]{clancey}.
 The recent missions step back
 from programmatic operation, and toward closely coupled human
 supervised control. The Mars rovers could
 certainly have been made more autonomous, but this would have opposed
 their function. The quality of the mission depends on ``aspects of the
 MER's design that promote the \emph{agency} of the scientists''
-themselves, rather than automated operation specifically\cite[p.
-  xii]{???-clancey}. Scientific work in the field is ``opportunistic,
-serendipitous, and incremental,''\cite[p. 32]{???-clancey} yielding
+themselves, rather than automated operation specifically \cite[p.
+  xii]{clancey}. Scientific work in the field is ``opportunistic, 
+serendipitous, and incremental,''\cite[p. 32]{clancey} yielding
 not so much to \emph{a priori}
 plans of great detail, but Suchman's ``situated
-action''\cite{???-suchman}. Researchers on the ground actually
+action''\cite{suchmanSA}. Researchers on the ground actually
 experience a sense of ``telepresence'' through these ``synergistic'' machines, created
 by virtue of their closely-coupled operations and the MER's
-semi-anthropomorphic bodies\cite[p. 55]{???-clancey}. Scientists see
+semi-anthropomorphic bodies\cite[p. 55]{clancey}. Scientists see
 as if they are the rover, and have to ``retool'' their thinking, to
 become the ``mind'' of the rover and plan its work in a ``symbiotic''
-way\cite[p. 106, 110, 118]{???-clancey}. The system's autonomy does not replace the
+way\cite[p. 106, 110, 118]{clancey}. The system's autonomy does not replace the
 scientists, but allows them to do more of what they want to do and are
 best at, and less of what they don't: some types of automation could reduce the
 autonomy of the scientists, and their ability to act creatively and
-spontaneously to capitalize on new findings\cite[p.
-  118-119]{???-clancey}. 
+spontaneously to capitalize on new findings\cite[p. 118-119]{clancey}. 
 
 \subsection{Unmanned Exploration and the Researcher}
 
 As Clancey suggests, autonomy is not an ``inherent property of
 technology'' but ``a relation between people, technology, and a
 task-environment'' and should be considered in those terms\cite[p.
-  119]{???-clancey}. While we might say, colloquially, that
-``\emph{Opportunity} encountered'' something,\cite[p. 8]{???-clancey} this
+  119]{clancey}. While we might say, colloquially, that 
+``\emph{Opportunity} encountered'' something,\cite[p. 8]{clancey} this
 is really just convenient shorthand for scientists on Earth encountering it
 through and in concert with the telerobotic platform. Human knowledge,
 perception, and common sense is integral to rover missions, and
