--- a/main.bib
+++ b/main.bib
@@ -1301,12 +1301,86 @@
    year = "2006",
 }
 
+@BOOK{SuchmanSA,
+   author = "Lucy Suchman",
+   title = "{P}lans and {S}ituated {A}ctions: {T}he {P}roblem of {H}uman {M}achine {C}ommunication",
+   publisher = "Cambridge University Press",
+   address = "Cambridge, UK",
+   year = "1987",
+}
+
 @TECHREPORT{NASAGeminiConcept,
    author = "{National Aeronautics and Space Administration}",
    title = "Project Gemini - A Chronology. Part 1 (A)",
    type = "NASA Special Publication",
    number = "4002",
    note = "http://www.history.nasa.gov/SP-4002/p1a.htm",
+}
+
+@TECHREPORT{tindallMay12,
+   author = "Bill Tindall",
+   title = "Spacecraft computer program requirements for AS-207/208",
+   type = "Memo from FM1/Assistant Chief, Mission Planning and Analysis Division",
+   number = "66-FM1-59",
+   note = "http://tindallgrams.net/66-FM1-59",
+}
+
+@TECHREPORT{BennettCheatham,
+   author = "Donald C. Cheatham and Floyd V. Bennett",
+   title = "{A}pollo Lunar Module Landing Strategy",
+   type = "NASA Manned Spacecraft Center Report",
+   note = "http://ocw.mit.edu/courses/science-technology-and-society/sts-471j-engineering-apollo-the-moon-project-as-a-complex-system-spring-2007/readings/4_2_lunr_landing.pdf",
+}
+
+@TECHREPORT{BennettExperience,
+   author = "Floyd V. Bennett",
+   title = "{A}pollo Experience Report - Mission Planning for Lunar Module Descent and Ascent",
+   type = "NASA Technical Note",
+   number = "NASA TN D-6846",
+   note = "http://www.hq.nasa.gov/alsj/nasa-tnd-6846pt.1.pdf",
+}
+
+@ARTICLE{Klumpp,
+   author = "Allan R. Klumpp",
+   title = "{A} {M}anually {R}etargeted {A}utomatic {L}anding {S}ystem for the {L}unar {M}odule ({LM})",
+   journal = "Journal of Spacecraft and Rockets",
+   month = "February",
+   year = 1968,
+   volume = 5,
+   number = 2,
+}
+
+@TECHREPORT{Seamans,
+   author = "Robert C. Seamans Jr.",
+   title = "{P}roject {A}pollo: {T}he {T}ough {D}ecisions",
+   type = "Monographs in Aerospace History",
+   number = "No. 37 SP-2005-4537",
+   note = "http://history.nasa.gov/monograph37.pdf",
+}
+
+@BOOK{coxMurray,
+   author = "Charles Murray and Catherine Bly Cox",
+   title = "{A}pollo: {T}he {R}ace to the {M}oon",
+   publisher = "Simon and Schuster",
+   address = "New York, NY",
+   year = "1989",
+}
+
+@TECHREPORT{Levine,
+   author = "Arnold S. Levine",
+   title = "{M}anaging {NASA} in the {A}pollo {E}ra",
+   type = "The {NASA} History Series",
+   year = "1982",
+   number = "SP-4012",
+   note = "http://history.nasa.gov/SP-4102/sp4102.htm",
+}
+
+@BOOK{clancey,
+   author = "William J. Clancey",
+   title = "{W}orking on {M}ars: {V}oyages of {S}cientific {D}iscovery with the {M}ars {E}xploration {R}overs",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "2014",
 }
 
 
